# fnrpc

./: .gitignore  AGENTS.md  Cargo.toml  Containerfile  LICENSE  README.md  README.zh-CN.md  ROADMAP.md  Roadmap.md  SUMMARY.md  bench-container.sh  dhat-fnrpc-web-echo-get.json  dhat-fnrpc-web-echo-post.json  dhat-fnrpc-web-noop-json.json  dhat-fnrpc-web-noop-raw.json  dhat-fnrpc-web-notfound.json  dhat-heap.json  dhat-xitca-web-echo-get.json  dhat-xitca-web-echo.json  dhat-xitca-web-noop-json.json  dhat-xitca-web-noop-raw.json  dhat-xitca-web-noop.json  justfile  package.json
.agents/: benchmark-guide.md  raw-handler-response.md  release.md  route_bytes-allocation.md
.changeset/: README.md  config.json  feat-bigint-envelope.md  fix-codegen-error-surfacing.md  fix-tauri-command-names.md  fix-utf8-percent-decode.md  remove-rpc-url-param.md  silver-moose-jump.md  specta-rc26-serde-rename.md  warm-ads-bow.md
.github/workflows/: ci.yml  release.yml
benches/: Cargo.toml  bench-server.sh  justfile
benches/benches/: dispatch.rs  server_latency.rs
benches/scripts/: hyperfine_fnrpc.sh
benches/src/: lib.rs
benches/src/compare/: axum_web.rs  fnrpc_axum_web.rs  fnrpc_web.rs  fnrpc_xitca_web.rs  mod.rs  utils.rs  xitca_web.rs
benches/src/compare/fnrpc_web_f/: json_with_meta.rs  mod.rs  raw_json.rs  text.rs
benches/src/compare/xitca_web_f/: raw_json.rs  text.rs
benches/src/server/: actix.rs  axum.rs  fnrpc_axum.rs  fnrpc_web.rs  fnrpc_xitca.rs  mod.rs  ntex.rs  readme.md  xitca_web.rs
crates/fnrpc/: Cargo.toml
crates/fnrpc-axum/: Cargo.toml
crates/fnrpc-axum/src/: lib.rs
crates/fnrpc-axum/tests/: integration.rs
crates/fnrpc-client/: Cargo.toml
crates/fnrpc-client/src/: lib.rs
crates/fnrpc-macros/: Cargo.toml
crates/fnrpc-macros/src/: bytes_handler.rs  func.rs  lib.rs  query.rs  raw_handler.rs  registry.rs  subscribe.rs
crates/fnrpc-tauri/: Cargo.toml
crates/fnrpc-tauri/src/: lib.rs
crates/fnrpc-web/: Cargo.toml
crates/fnrpc-web/src/: lib.rs
crates/fnrpc-web/tests/: integration.rs
crates/fnrpc-xitca/: Cargo.toml
crates/fnrpc-xitca/src/: lib.rs
crates/fnrpc-xitca/tests/: integration.rs
crates/fnrpc/src/: codec.rs  codegen.rs  error.rs  gen_ts_client.rs  handler.rs  lib.rs  middleware.rs  output.rs  router.rs  serializer.rs
crates/fnrpc/src/handler/: bytes_handler.rs  mod.rs  rpc_output.rs
crates/fnrpc/src/middlewares/: hook.rs  mod.rs  tracing.rs
crates/fnrpc/tests/: integration.rs  typegen.rs
e2e/fnrpc-axum/: README.md
e2e/fnrpc-axum/client/: package.json  run.ts
e2e/fnrpc-axum/client/src/: bindings.ts  client.ts
e2e/fnrpc-axum/server/: Cargo.toml
e2e/fnrpc-axum/server/src/: lib.rs  main.rs
examples/axum-react-query/: package.json
examples/axum-react-query/server/: Cargo.toml
examples/axum-react-query/server/src/: axum_router.rs  main.rs  rpc_func.rs
examples/axum-react-query/server/src/scripts/: gen_fnrpc.rs
examples/axum-react-query/src/: main.tsx  router.tsx
examples/axum-react-query/src/integrations/fnrpc/: bindings.ts
examples/axum-react-query/src/routes/: __root.tsx  index.tsx
examples/tauri-solid-tanstack/: index.html  package.json  tsconfig.json  vite.config.ts
examples/tauri-solid-tanstack/src/: main.tsx  router.tsx
examples/tauri-solid-tanstack/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri-solid-tanstack/src-tauri/src/: ctx.rs  lib.rs  main.rs
examples/tauri-solid-tanstack/src-tauri/src/feat/demo/: func.rs
examples/tauri-solid-tanstack/src-tauri/src/integrations/: fnrpc_axum.rs  fnrpc_func.rs  fnrpc_tauri.rs  mod.rs
examples/tauri-solid-tanstack/src-tauri/src/scripts/: gen_fnrpc.rs
examples/tauri-solid-tanstack/src/components/ui/: button.tsx
examples/tauri-solid-tanstack/src/integrations/fnrpc/: bindings.ts  client.ts
examples/tauri-solid-tanstack/src/integrations/tanstack-query/: provider.ts
examples/tauri-solid-tanstack/src/routes/: __root.tsx  index.tsx
examples/with-axum/: Cargo.toml
examples/with-axum/src/: main.rs
examples/with-react-query/: index.html  package.json  tsconfig.json  vite.config.ts
examples/with-react-query/server/: Cargo.toml
examples/with-react-query/server/src/: ctx.rs  lib.rs  main.rs  rpc_func.rs
examples/with-react-query/src/integrations/fnrpc/: bindings.ts  client.ts
examples/with-react-query/src/integrations/tanstack-query/: provider.ts
examples/with-react-query/src/routes/: index.tsx
examples/with-xitca/: Cargo.toml
examples/with-xitca/src/: main.rs
scripts/: publish-rust.sh
