[workspace]
members = [
    "crates/*",
    "examples/tauri-solid-tanstack/src-tauri",
    "examples/axum-react-query/server"
]
default-members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.2.0"
edition = "2024"
description = "Rust functions power your API — TypeScript types generated automatically via specta. A single router serves both Axum (HTTP SSE) and Tauri (IPC). Frontend calls `client.my_rpc(input)` directly; subscriptions return AsyncIterable. TanStack Query integration built in."
license = "MIT"
keywords = ["rpc", "typescript", "tauri", "axum", "specta"]
categories = ["asynchronous", "network-programming"]

[workspace.dependencies]
async-trait = "0.1"
http = "1"
serde = { version = "1", features = ["derive"] }
specta = { version = "=2.0.0-rc.25", features = ["derive", "serde_json"] }
specta-typescript = { version = "0.0.12", features = ["serde"] }

[profile.release]
lto = "fat"
codegen-units = 1
