[workspace]
members = [
    "crates/*",
    "benches",
    "examples/tauri-solid-tanstack/src-tauri",
    "examples/with-axum",
    "examples/with-react-query/server",
    "examples/with-xitca",
    "e2e/fnrpc-axum/server"
]
default-members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.3.4"
edition = "2024"
description = "Rust functions power your API — TypeScript types generated automatically via specta. A single router serves both Axum (HTTP SSE) and Tauri (IPC). Frontend calls `client.my_rpc(input)` directly; subscriptions return AsyncIterable. TanStack Query integration built in."
license = "MIT"
keywords = ["rpc", "typescript", "tauri", "axum", "specta"]
categories = ["asynchronous", "network-programming"]

[workspace.dependencies]
async-trait = "0.1"
http = "1"
# `arbitrary_precision` lets `serde_json::Value` represent i128/u128 (full
# u64/i64/i128/u128 range) so bigint fields decoded from their string wire form
# survive round-trips without precision loss.
serde_json = { version = "1", features = ["arbitrary_precision"] }
serde = { version = "1", features = ["derive"] }
specta = { version = "=2.0.0-rc.25", features = ["derive", "serde_json"] }
specta-typescript = { version = "0.0.12", features = ["serde"] }
xitca-router = "0.4"
fnrpc = { version = "0.3.4", path = "crates/fnrpc" }
fnrpc-macros = { version = "0.3.4", path = "crates/fnrpc-macros" }

[profile.release]
lto = "fat"
codegen-units = 1
