[workspace]
members = [
    "crates/*",
    "benches",
    "examples/tauri-solid-tanstack/src-tauri",
    "examples/with-axum",
    "examples/with-react-query/server",
    "examples/with-xitca",
    "e2e/fnrpc-axum/server"
]
default-members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.4.0"
edition = "2024"
description = "Rust functions power your API — TypeScript types generated automatically via specta. A single router serves both Axum (HTTP SSE) and Tauri (IPC). Frontend calls `client.my_rpc(input)` directly; subscriptions return AsyncIterable. TanStack Query integration built in."
license = "MIT"
keywords = ["rpc", "typescript", "tauri", "axum", "specta"]
categories = ["asynchronous", "network-programming"]

[workspace.dependencies]
async-trait = "0.1"
http = "1"
# `arbitrary_precision` lets `serde_json::Value` represent i128/u128 (full
# u64/i64/i128/u128 range) so bigint fields decoded from their string wire form
# survive round-trips without precision loss.
serde_json = { version = "1", features = ["arbitrary_precision"] }
serde = { version = "1", features = ["derive"] }
specta = { version = "=2.0.0-rc.26", features = ["derive", "serde_json"] }
specta-typescript = { version = "0.0.13", features = ["serde"] }
specta-serde = { version = "0.0.13" }
specta-util = { version = "0.0.13" }
xitca-router = "0.4"
fnrpc = { version = "0.4.0", path = "crates/fnrpc" }
fnrpc-macros = { version = "0.4.0", path = "crates/fnrpc-macros" }

[profile.release]
lto = "fat"
codegen-units = 1

# Specta rc.26 crates are not yet published to crates.io; track the exact
# commit tauri-specta uses so we stay in sync with upstream behaviour
# (including serde variant/field renames via `specta-serde::PhasesFormat`).
# TODO: Remove once the rc.26 Specta crates are published.
[patch.crates-io]
specta = { git = "https://github.com/specta-rs/specta.git", rev = "3c535739ea7bd8737ecdbff6c3aef9b7330da706" }
specta-macros = { git = "https://github.com/specta-rs/specta.git", rev = "3c535739ea7bd8737ecdbff6c3aef9b7330da706" }
specta-serde = { git = "https://github.com/specta-rs/specta.git", rev = "3c535739ea7bd8737ecdbff6c3aef9b7330da706" }
specta-typescript = { git = "https://github.com/specta-rs/specta.git", rev = "3c535739ea7bd8737ecdbff6c3aef9b7330da706" }
specta-util = { git = "https://github.com/specta-rs/specta.git", rev = "3c535739ea7bd8737ecdbff6c3aef9b7330da706" }
