[package]
name = "fnrpc-axum"
version.workspace = true
edition.workspace = true
description = "Axum integration for fnrpc — FnrpcState, handler, and utilities for serving RPC over HTTP"
license = "MIT"
repository = "https://github.com/Nahida-aa/fnrpc"

[dependencies]
fnrpc.workspace = true
axum = "0.8"
serde_json.workspace = true
futures = "0.3"
async-trait = { workspace = true }
url = "2"
http-body = "1"
http-body-util = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "rt"] }
http-body-util = "0.1"
tower = "0.5"
serde = { version = "1", features = ["derive"] }
