[package]
name = "fnrpc-macros"
version.workspace = true
edition.workspace = true
description = "Proc macros for fnrpc — attribute macros for defining typed RPC functions"
license = "MIT"
repository = "https://github.com/Nahida-aa/fnrpc"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
syn = { version = "2", features = ["full"] }
quote = "1"
