[package]
name = "fnrpc-tauri"
version.workspace = true
edition.workspace = true
description = "Tauri integration for fnrpc — serve RPC procedures over Tauri IPC"
license.workspace = true

[dependencies]
fnrpc.workspace = true
tauri = { version = "2" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
tokio = { version = "1", default-features = false, features = ["macros"] }
tokio-util = "0.7"
