[package]
name = "fnrpc-web"
version.workspace = true
edition.workspace = true
description = "Standalone fnrpc HTTP server on xitca-http + xitca-server — zero framework overhead, for benchmarking"
license = "MIT"

[dependencies]
fnrpc = { version = "0.2.0", path = "../fnrpc" }
xitca-server = "0.7"
xitca-http = { version = "0.9", features = ["http1"] }
xitca-service = "0.3"
serde_json = "1"
url = "2"
futures = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["full", "rt"] }
serde = { version = "1", features = ["derive"] }
async-trait = { workspace = true }
