[package]
name = "fnrpc-xitca"
version.workspace = true
edition.workspace = true
description = "xitca-web integration for fnrpc — FnrpcState, handler, and utilities for serving RPC over HTTP"
license = "MIT"

[dependencies]
fnrpc.workspace = true
xitca-web = { version = "0.8", features = ["json", "params", "urlencoded"] }
serde_json = "1"
futures = "0.3"
url = "2"

[dev-dependencies]
tokio = { version = "1", features = ["full", "rt"] }
serde = { version = "1", features = ["derive"] }
async-trait = { workspace = true }
xitca-unsafe-collection = "0.2"
http-body-util = "0.1"
