[package]
name = "fnrpc"
version.workspace = true
edition.workspace = true
description = "Type-safe RPC for Rust + TypeScript — define functions once, get typed clients everywhere"
license = "MIT"
repository = "https://github.com/Nahida-aa/fnrpc"

[dependencies]
async-trait.workspace = true
fnrpc-macros = { version = "0.1.0",  path = "../fnrpc-macros" }
futures = { version = "0.3", default-features = false, features = ["std"] }
serde.workspace = true
serde_json = "1"
specta.workspace = true
specta-typescript = "0.0.12"
tracing = { version = "0.1", optional = true }

[features]
tracing = ["dep:tracing"]

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
