[package]
name = "fnrpc"
version.workspace = true
edition.workspace = true
description = "Type-safe RPC for Rust + TypeScript — define functions once, get typed clients everywhere"
license = "MIT"
repository = "https://github.com/Nahida-aa/fnrpc"

[dependencies]
fnrpc-macros = { version = "0.2.0",  path = "../fnrpc-macros" }
futures = { version = "0.3", default-features = false, features = ["std"] }
http.workspace = true
serde.workspace = true
xitca-router.workspace = true
serde_json = "1"
specta.workspace = true
specta-typescript.workspace = true
tracing = { version = "0.1", optional = true }

[features]
tracing = ["dep:tracing"]

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
