[package]
name = "fnrpc"
version.workspace = true
edition.workspace = true
description = "Type-safe RPC for Rust + TypeScript — define functions once, get typed clients everywhere"
license = "MIT"
repository = "https://github.com/Nahida-aa/fnrpc"

[dependencies]
fnrpc-macros.workspace = true
futures = { version = "0.3", default-features = false, features = ["std"] }
http.workspace = true
serde.workspace = true
xitca-router.workspace = true
serde_json.workspace = true
specta.workspace = true
specta-typescript.workspace = true
tracing = { version = "0.1", optional = true }

[features]
default = ["ts-bindings"]
tracing = ["dep:tracing"]
ts-bindings = []

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
