[package]
name = "with-axum"
version = "0.1.0"
edition.workspace = true

[dependencies]
fnrpc = { path = "../../crates/fnrpc" }
fnrpc-axum = { path = "../../crates/fnrpc-axum" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
serde = { version = "1", features = ["derive"] }
