[package]
name = "with-xitca"
version = "0.1.0"
edition.workspace = true

[dependencies]
fnrpc = { path = "../../crates/fnrpc" }
fnrpc-xitca = { path = "../../crates/fnrpc-xitca" }
xitca-web = { version = "0.8", features = ["json", "params", "urlencoded"] }
xitca-unsafe-collection = "0.2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
