[package]
name = "e2e-fnrpc-axum-server"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
fnrpc = { path = "../../../crates/fnrpc" }
fnrpc-axum = { path = "../../../crates/fnrpc-axum" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
specta = { version = "=2.0.0-rc.25", features = ["derive", "serde_json"] }
futures = "0.3"
