[package]
name = "axum-react-query-server"
version = "0.1.0"
description = "fnrpc Axum + React + TanStack Router example"
edition = "2024"
default-run = "axum-react-query-server"

[[bin]]
name = "gen-fnrpc"
path = "src/scripts/gen_fnrpc.rs"

[dependencies]
axum = "0.8.9"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
fnrpc = { path = "../../../crates/fnrpc", features = ["tracing"] }
fnrpc-axum = { path = "../../../crates/fnrpc-axum" }
tower-http = { version = "0.6", features = ["cors"] }
futures = { version = "0.3", default-features = false, features = ["std"] }
specta = { version = "=2.0.0-rc.25", features = ["derive", "serde_json"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
