[package]
name = "tauri-solid-tanstack"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "tauri-solid-tanstack"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_solid_tanstack_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "gen-fnrpc"
path = "src/scripts/gen_fnrpc.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.8.9"
fnrpc = { path = "../../../crates/fnrpc", features = ["tracing"] }
futures = { version = "0.3", default-features = false, features = ["std"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.89"
specta = { version = "=2.0.0-rc.25", features = ["derive", "serde_json"] }

# Read the optimization guideline for more details: https://tauri.app/concept/size/#cargo-configuration
[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
strip = true
